upgrade flux to fix scrollbar?

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,7 @@
 
 /* Re-assign Flux's gray of choice... */
 @theme {
+    --font-sans: Inter, sans-serif;
     --color-zinc-50: var(--color-slate-50);
     --color-zinc-100: var(--color-slate-100);
     --color-zinc-200: var(--color-slate-200);
